@@ -5,6 +5,8 @@ ikiwiki (3.07) UNRELEASED; urgency=low
   * wmd: New plugin contributed by William Uther to support the WMD
     Wysiwym markdown editor.
   * smiley: Avoid infinite loop in smiley expansion. Closes: #518805
+  * template: When loading a template in scan mode, let preprocess
+    know it only needs to scan.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Mar 2009 15:43:02 -0500
 
